Fixed BannerSkeleton mobile styles.

--- a/src/components/BannerSkeleton/styles.module.css
+++ b/src/components/BannerSkeleton/styles.module.css
@@ -1,8 +1,8 @@
 .section {
-  /* position: absolute;
+  position: absolute;
   top: 0;
   left: 0;
-  right: 0; */
+  right: 0;
   opacity: 0.5;
 }
 
@@ -14,7 +14,7 @@
 .content {
   position: relative;
   height: 580px;
-  padding: 10px;
+  padding: 130px 69px 10px 20px;
 }
 
 .back {
@@ -28,14 +28,6 @@
   background-color: var(--skeleton-highlight);
 }
 
-.innerContent {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  padding: 126px 67px 0 19px;
-}
-
 .subtitle {
   max-width: 310px;
   height: 15px;
@@ -44,15 +36,15 @@
 }
 
 .title {
-  max-width: 300px;
+  max-width: 380px;
   height: 44px;
   border-radius: 10px;
-  margin-bottom: 22px;
+  margin-bottom: 31px;
 }
 
 .title:nth-child(3) {
-  max-width: 380px;
-  margin-bottom: 32px;
+  max-width: 300px;
+  margin-bottom: 24px;
 }
 
 .paragraph {
@@ -74,9 +66,9 @@
 
 .footer {
   position: absolute;
-  left: 5px;
-  right: 5px;
-  bottom: 5px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
   height: 80px;
   border-radius: 10px;
 }
